--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
 [submodule "dependencies/submodules/delta-studio"]
 	path = dependencies/submodules/delta-studio
-	url = https://github.com/ange-yaghi/delta-studio
+	url = https://github.com/wongfei/delta-studio
+	branch = acplugin
 [submodule "dependencies/submodules/simple-2d-constraint-solver"]
 	path = dependencies/submodules/simple-2d-constraint-solver
-	url = https://github.com/ange-yaghi/simple-2d-constraint-solver
+	url = https://github.com/wongfei/simple-2d-constraint-solver
+	branch = acplugin
 [submodule "dependencies/submodules/direct-to-video"]
 	path = dependencies/submodules/direct-to-video
 	url = https://github.com/ange-yaghi/direct-to-video
